use clipboard api for contact and fixes - fix content on modal overflowing - fix modal not vertically centered on screen

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -58,6 +58,9 @@ blockquote { border-left: 0.3rem solid $tertiary!important; }
     img { margin-right: 10px; }
   }
   img { vertical-align: middle; }
+  .card-content {
+    overflow: hidden;
+  }
 }
 
 // Flex
